--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,15 +48,16 @@ const listArrowClasses = clsx(
 );
 ---
 
-<Layout title="Will Nelson">
+<Layout title="Eiron Mendoza">
 	<main class={mainClasses}>
 		<h1 class="text-6xl font-bold leading-tight">
-			Hi, I'm <span class={nameGradientClasses}>Will</span>!
+			Hi, I'm <span class={nameGradientClasses}>Eiron</span>!
 		</h1>
-		<h2 class="font-light text-2xl">Software Engineer @ Discord</h2>
+		<h2 class="font-light text-2xl">2nd Year Bachelor of Science in Information Technology</h2>
+		<h2 class="font-light text-2xl">@ Nueva Ecija University of Science and Technology</h2>
 		<nav class="flex gap-3 mt-6">
 			<IconButton
-				href="mailto:me@wnelson.dev"
+				href="mailto:hello@eironmendoza.com"
 				iconClass="i-fa-solid-at hover:bg-violet-700"
 				label="Email"
 			/>
@@ -66,27 +67,27 @@ const listArrowClasses = clsx(
 				label="Resume"
 			/>
 			<IconButton
-				href="https://github.com/appellation"
+				href="https://github.com/eironm"
 				iconClass="i-simple-icons-github hover:bg-[#2da44e]"
 				label="Github"
 			/>
 			<IconButton
-				href="https://bsky.wnelson.dev"
+				href="https://bsky.eironmendoza.com"
 				iconClass="i-simple-icons-bluesky hover:bg-[rgb(0,133,255)]"
 				label="Bluesky"
 			/>
 			<IconButton
-				href="https://linkedin.com/in/williamonelson"
+				href="#"
 				iconClass="i-simple-icons-linkedin hover:bg-[#0077B5]"
 				label="LinkedIn"
 			/>
 			<IconButton
-				href="https://keybase.io/appellation"
+				href="#"
 				iconClass="i-simple-icons-keybase hover:bg-[#ff6f21]"
 				label="Keybase"
 			/>
 			<IconButton
-				href="https://tidal.com/browse/user/196996231"
+				href="#"
 				iconClass="i-simple-icons-tidal hover:bg-white dark:hover:bg-black"
 				label="Tidal"
 			/>
